Relocate PCA and distance

--- a/Task1/PCA and distance base/PCA_distance_ml.ipynb
+++ b/Task1/PCA and distance base/PCA_distance_ml.ipynb
@@ -49,7 +49,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 40/40 [00:00<00:00, 79.96it/s] \n"
+      "100%|██████████| 40/40 [00:00<00:00, 74.67it/s] \n"
      ]
     }
    ],
@@ -124,27 +124,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 80/80 [00:00<00:00, 12166.22it/s]\n",
-      "100%|██████████| 80/80 [00:00<00:00, 11488.88it/s]\n",
-      "100%|██████████| 80/80 [00:00<00:00, 8931.89it/s]\n",
-      "100%|██████████| 80/80 [00:00<00:00, 9612.52it/s]\n",
-      "100%|██████████| 80/80 [00:00<00:00, 13293.10it/s]\n"
+      "100%|██████████| 80/80 [00:00<00:00, 11318.37it/s]\n",
+      "100%|██████████| 80/80 [00:00<00:00, 7005.83it/s]\n",
+      "100%|██████████| 80/80 [00:00<00:00, 6265.77it/s]\n",
+      "100%|██████████| 80/80 [00:00<00:00, 7673.62it/s]\n",
+      "100%|██████████| 80/80 [00:00<00:00, 6065.08it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function euclidean_distance at 0x000001FF7D2C4048> cross validation score: 0.96750\n",
-      "<function mahattan_distance at 0x000001FF7D28CA68> cross validation score: 0.96000\n",
-      "<function minkowski_distance at 0x000001FF7D2F0828> cross validation score: 0.96250\n",
-      "<function sse at 0x000001FF7D2F0CA8> cross validation score: 0.96750\n",
-      "<function ab_distance at 0x000001FF7D2F7E58> cross validation score: 0.96500\n",
-      "<function ccb_distance at 0x000001FF7D2FC318> cross validation score: 0.96500\n",
-      "<function mahalanobis_distance at 0x000001FF7D2FC288> cross validation score: 0.93500\n",
-      "<function chi2_distance at 0x000001FF7D2FC048> cross validation score: 0.00500\n",
-      "<function canbera_distance at 0x000001FF7D2FC1F8> cross validation score: 0.93500\n",
-      "<function modified_mahattan_distance at 0x000001FF7D2FCE58> cross validation score: 0.97000\n"
+      "<function euclidean_distance at 0x000001A58C1FC168> cross validation score: 0.96500\n",
+      "<function mahattan_distance at 0x000001A58C1ADB88> cross validation score: 0.96000\n",
+      "<function minkowski_distance at 0x000001A58C227948> cross validation score: 0.96000\n",
+      "<function sse at 0x000001A58C227DC8> cross validation score: 0.96500\n",
+      "<function ab_distance at 0x000001A58C22CF78> cross validation score: 0.96250\n",
+      "<function ccb_distance at 0x000001A58C22F438> cross validation score: 0.96250\n",
+      "<function mahalanobis_distance at 0x000001A58C22F3A8> cross validation score: 0.94000\n",
+      "<function chi2_distance at 0x000001A58C22F168> cross validation score: 0.00500\n",
+      "<function canbera_distance at 0x000001A58C22F318> cross validation score: 0.94500\n",
+      "<function modified_mahattan_distance at 0x000001A58C22FF78> cross validation score: 0.96500\n"
      ]
     }
    ],
@@ -190,11 +190,11 @@
      "text": [
       "LDA mean cross validations score:0.99000\n",
       "LR mean cross validations score:0.98750\n",
-      "NB mean cross validations score:0.87750\n",
-      "KNN mean cross validations score:0.87750\n",
+      "NB mean cross validations score:0.88750\n",
+      "KNN mean cross validations score:0.88500\n",
       "DT mean cross validations score:0.57500\n",
-      "SVM mean cross validations score:0.96500\n",
-      "RF mean cross validations score:0.93500\n"
+      "SVM mean cross validations score:0.96750\n",
+      "RF mean cross validations score:0.92750\n"
      ]
     }
    ],
